<resources>
    <string name="app_name">Papan Score</string>
    <string name="scoreA">0</string>
    <string name="reset">reset</string>
    <string name="teamA">Real Madrid</string>
    <string name="spasi" />
    <string name="timB">Manchaster United</string>
    <string name="scoreB">0</string>
    <string name="tambahA">Goal!!!</string>
    <string name="tambahB">Goal!!!</string>
    <string name="judul">Papan Score</string>
    <string name="sepasi"> </string>
    <string name="madrid">TODO</string>
    <string name="MU">TODO</string>
</resources>
